Add landing page

--- a/index.html
+++ b/index.html
@@ -1,12 +1,55 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html>
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta http-equiv="Content-Style-Type" content="text/css">
-  <title>Hodlify</title>
- 
-</head>
-<body>
-	<h1>Hello Hodlify from Organization!</h1>				
-</body>
+<!DOCTYPE html>
+<html lang="ru">
+	<head>
+		<meta charset="utf-8">
+		<title>Hodlify</title>
+		<meta name="viewport" content="width=device-width">
+        <meta name="description" content="Cryptocurrency wallet tracker">
+        <meta name="keywords" content="cryptocurrency,coin,wallet,exchange,tracker,portfolio,hodl">
+        <meta name="author" content="Hodlify">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<link rel="stylesheet" href="./css/style.css" type="text/css"/>
+        <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
+        <link rel="icon" href="./img/favicon.png" type="image/x-icon">
+	</head>
+	<body>
+		<div id="wrapper">
+
+			<div class="grid logo">
+				
+				<h1 class="logo">
+					<a href="#">
+						<img src="./img/logo.png"/>
+					</a>
+				</h1>
+
+			</div>
+
+			<div class="grid header-description">
+				<p>
+					Cryptocurrency wallet tracker
+				</p>
+			</div>
+
+			<div class="grid center-section">
+				<div class="motto">Install<br/>right now</div>
+				<ul class="grid motto-description">
+					<li>View your holdings<br/>in one place<br/>with pie chart</li>
+					<li>Support variuos<br/>wallets and<br/>exchanges</li>
+					<li>Easy manage<br/>your wallets<br/>in one click</li>
+				</ul>
+
+				<a class="appmarket-link" href="https://play.google.com/store/apps/details?id=app.hodlify"><img src="./img/googleplay.png"></a>
+				<a class="appmarket-link" href="https://github.com/hodlify"><img src="./img/github.png"></a>
+				
+			</div>
+
+			<div class="grid center-image">
+				<img src="./img/phone.png" class="normal"/>
+	
+				<svg id="bg-circle"></svg>
+			</div>
+			
+		</div>
+	</body>
 </html>
